--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gtmtools",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rsinohara.github.io",
+  "homepage": "https://rsinohara.github.io/gtmtools",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
